# CSSE4011

./: .gitignore  CMakeLists.txt  README.md  west.yml
lib/: Kconfig
project/dashboards/supplychain-dashboard/: .dockerignore  .gitignore  .prod.env  Dockerfile.django  Dockerfile.web  dc  deploy  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  dockerfile  manage.py  pyproject.toml  readme.md  tempcomponents
project/dashboards/supplychain-dashboard/abac/: constants.py  models.py
project/dashboards/supplychain-dashboard/accounts/: admin.py  auth.py  auth_backends.py  models.py  permissions.py  serialisers.py  urls.py  utils.py  views.py
project/dashboards/supplychain-dashboard/notifications/: admin.py  models.py  serialisers.py  urls.py  views.py
project/dashboards/supplychain-dashboard/supplychain/: admin.py  apps.py  models.py  serialisers.py  signals.py  urls.py  views_product.py
project/dashboards/supplychain-dashboard/supplychain_dashboard/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
project/supplychain-dashboard/: dc  docker-compose.yml  dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
project/supplychain-dashboard/abac/: admin.py  apps.py  backend.py  constants.py  models.py
project/supplychain-dashboard/accounts/: models.py
project/supplychain-dashboard/supplychain/: admin.py  models.py  permissions.py  serialisers.py  urls.py  views_product.py
project/supplychain-dashboard/supplychain_dashboard/: settings.py  settings_prod.py  urls.py
project/supplychain-dashboard/vue/: pnpm-lock.yaml
(+236 files in other folders)
